--- a/app/src/main/res/layout/competition_item.xml
+++ b/app/src/main/res/layout/competition_item.xml
@@ -17,9 +17,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:fontFamily="sans-serif-condensed-medium"
-            android:textSize="16sp"
             android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
             android:textColor="?android:textColorPrimary"
+            android:textSize="16sp"
             tools:text="Premier League" />
 
         <View
@@ -30,14 +30,14 @@
 
         <TextView
             android:id="@+id/tvMatchday"
-            android:layout_gravity="center_vertical"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="12sp"
+            android:layout_gravity="center_vertical"
+            android:fontFamily="sans-serif-light"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"
             android:textColor="?android:textColorPrimary"
-            android:fontFamily="sans-serif-light"
-            tools:text="Matchday #" />
+            android:textSize="12sp"
+            tools:text="Giornata:" />
 
     </LinearLayout>
 
