--- a/app/src/main/res/layout/date_item.xml
+++ b/app/src/main/res/layout/date_item.xml
@@ -17,7 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:fontFamily="sans-serif"
+            android:fontFamily="casual"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="?android:textColorPrimary"
             android:textSize="24sp"
@@ -44,7 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            android:fontFamily="sans-serif"
+            android:fontFamily="casual"
             android:gravity="center_vertical"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="?android:textColorPrimary"
