--- a/app/src/main/res/layout/match_item.xml
+++ b/app/src/main/res/layout/match_item.xml
@@ -8,7 +8,7 @@
     android:layout_marginRight="@dimen/spacing_small"
     android:layoutDirection="inherit"
     android:orientation="vertical"
-    app:cardBackgroundColor="?attr/colorSecondary">
+    app:cardBackgroundColor="?android:attr/textColorTertiaryInverse">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,13 +17,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:minHeight="40dp"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
             android:layout_marginTop="5dp"
+            android:layout_marginRight="10dp"
             android:layout_marginBottom="5dp"
+            android:minHeight="40dp"
+            android:orientation="horizontal"
 
             >
 
