--- a/app/src/main/res/menu/bottomappbar_menu.xml
+++ b/app/src/main/res/menu/bottomappbar_menu.xml
@@ -8,7 +8,7 @@
         app:showAsAction="always" />
     <item
         android:id="@+id/itemPreferences"
-        android:icon="@drawable/ic_menu_black_24dp"
+        android:icon="@android:drawable/ic_menu_sort_by_size"
         android:title="Preferences"
         app:showAsAction="always" />
     <item
